docs/version-1.7.0/modules/en/pages/snapshots-backups/system-backups/restore-system.adoc
= Restore the Longhorn System
:current-version: {page-component-version}

== Longhorn System Restore Rollouts

* Longhorn restores the resource from the xref:snapshots-backups/system-backups/create-system-backup.adoc#_longhorn_system_backup_bundle[Longhorn System Backup Bundle].
* Longhorn does not restore existing `Volumes` and their associated `PersistentVolume` and `PersistentVolumeClaim`.
* Longhorn automatically restores a `Volume` from its latest backup.
* To prevent overwriting eligible settings, Longhorn does not restore the `ConfigMap/longhorn-default-setting`.
* Longhorn does not restore <<_configurable_settings,configurable settings>>.

== Limitations

=== Restore Path

Longhorn does not support cross-major/minor version system restore except for upgrade failures, ex: 1.4.x \-> 1.5.

== Create Longhorn System Restore

You can restore the Longhorn system using Longhorn UI. Or with the `kubectl` command.

=== Prerequisite

* A running Longhorn cluster for Longhorn to roll out the resources in the system backup bundle.
* Set up the `Nodes` and disk tags for `StorageClass`.
* Have a Longhorn system backup.
+
See xref:snapshots-backups/system-backups/create-system-backup.adoc#_create_longhorn_system_backup[Backup Longhorn System - Create Longhorn System Backup] for instructions.

* All existing `Volumes` are detached.

=== Using Longhorn UI

. Go to the `System Backup` page in the `Setting`.
. Select a system backup to restore.
. Click `Restore` in the `Operation` drop-down menu.
. Give a `Name` for the system restore.
. The system restore starts and show the `Completed` state when done.

== Using `kubectl` Command

. Find the Longhorn `SystemBackup` to restore.
+
----
> kubectl -n longhorn-system get systembackup
NAME     VERSION   STATE   CREATED
demo     v1.4.0    Ready   2022-11-24T04:23:24Z
demo-2   v1.4.0    Ready   2022-11-24T05:00:59Z
----

. Execute `kubectl create` to create a Longhorn `SystemRestore` of the `SystemBackup`.
+
[subs="+attributes",yaml]
----
apiVersion: longhorn.io/v1beta2
kind: SystemRestore
metadata:
  name: restore-demo
  namespace: longhorn-system
spec:
  systemBackup: demo
----

. The system restore starts.
. The `SystemRestore` change to state `Completed` when done.
+
----
> kubectl -n longhorn-system get systemrestore
NAME           STATE       AGE
restore-demo   Completed   59s
----

== Delete Longhorn System Restore

WARNING: Deleting the SystemRestore also deletes the associated job and will abort the remaining resource rollouts. You can <<_restart_longhorn_system_restore,Restart the Longhorn System Restore>> to roll out the remaining resources.

You can abort or remove a completed Longhorn system restore using Longhorn UI. Or with the `kubectl` command.

=== Using Longhorn UI

. Go to the `System Backup` page in the `Setting`.
. Delete a single system restore in the `Operation` drop-down menu next to the system restore. Or delete in batch with the `Delete` button.

=== Using `kubectl` Command

. Execute `kubectl delete` to delete a Longhorn `SystemRestore`.
+
----
> kubectl -n longhorn-system get systemrestore
NAME           STATE       AGE
restore-demo   Completed   2m37s

> kubectl -n longhorn-system delete systemrestore/restore-demo
systemrestore.longhorn.io "restore-demo" deleted
----

== Restart Longhorn System Restore

. <<_delete_longhorn_system_restore,Delete Longhorn System Restore>> that is in progress.
. <<_create_longhorn_system_restore,Create Longhorn System Restore>>.

== Configurable Settings

Some settings are excluded as configurable before the Longhorn system restore.

* xref:longhorn-system/settings.adoc#_concurrent_volume_backup_restore_per_node_limit[Concurrent volume backup restore per node limit]
* xref:longhorn-system/settings.adoc#_concurrent_replica_rebuild_per_node_limit[Concurrent replica rebuild per node limit]
* xref:longhorn-system/settings.adoc#_backup_target[Backup Target]
* xref:longhorn-system/settings.adoc#_backup_target_credential_secret[Backup Target Credential Secret]

== Troubleshoot

=== System Restore Hangs

. Check the longhorn-system-rollout Pod log for any errors.
+
----
> kubectl -n longhorn-system logs --selector=job-name=longhorn-system-rollout-<SYSTEM-RESTORE-NAME>
----

. Resolve if the issue is identifiable, ex: remove the problematic restoring resource.
. <<_restart_longhorn_system_restore,Restart the Longhorn system restore>>.

== History

https://github.com/longhorn/longhorn/issues/1455[Original Feature Request]

Available since v1.4.0
